force-app/main/default/objects/OCE__AccountPlanMemberStakeholder__c/OCE__AccountPlanMemberStakeholder__c.object-meta.xml
<CustomObject>
    <description>Connected Account Plan Team Members for Account Plan Stakeholders.</description>
    <label>Account Plan Member Stakeholder</label>
    <nameField>
        <displayFormat>APMS-{0000000000}</displayFormat>
        <label>Account Plan Member Stakeholder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Member Stakeholders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>