force-app/main/default/objects/OCE__AccountPlanMemberStakeholder__c/fields/OCE__AccountPlanMember__c.field-meta.xml
<CustomField>
    <fullName>OCE__AccountPlanMember__c</fullName>
    <description>Link to parent Account Plan Team Member</description>
    <label>Account Plan Member</label>
    <referenceTo>OCE__AccountPlanMember__c</referenceTo>
    <relationshipLabel>Linked Stakeholders</relationshipLabel>
    <relationshipName>AccountPlanMemberStakeholders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>