force-app/main/default/objects/OCE__AccountPlanMemberStakeholder__c/fields/OCE__AccountPlanStakeholder__c.field-meta.xml
<CustomField>
    <fullName>OCE__AccountPlanStakeholder__c</fullName>
    <description>Link to parent Account Plan Stakeholder</description>
    <label>Account Plan Stakeholder</label>
    <referenceTo>OCE__AccountPlanStakeholder__c</referenceTo>
    <relationshipLabel>Linked Team Members</relationshipLabel>
    <relationshipName>AccountPlanMemberStakeholders</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>